# real-time-2d-object-recognition

./: .gitignore  CMakeLists.txt  README.md
.zed/: tasks.json
source/: k_means.cpp  k_means.hpp  main.cpp  object_recognition.cpp  utilities.cpp
